--- a/react_frontend/src/components/Account.css
+++ b/react_frontend/src/components/Account.css
@@ -43,7 +43,7 @@ h1, h2, h3 {
     box-shadow: 3px 3px 0px #ddd;
 }
 
-.back-button:hover, .admin-button, .login-button:hover {
+.back-button:hover, .admin-button:hover, .login-button:hover {
     background-color: #ddd;
     color: #ff3333;
     box-shadow: 5px 5px 0px #ff3333;
