--- a/react_frontend/src/components/Home.css
+++ b/react_frontend/src/components/Home.css
@@ -47,15 +47,16 @@ h1 {
   margin: 0;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   letter-spacing: 2px;
-  /*animation: flicker 2s infinite;*/
+  animation: flicker 2s infinite;
 }
+
 h2 {
   color: #ff3333;
   text-transform: uppercase;
   margin: 0;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   letter-spacing: 2px;
-  /*animation: flicker 2s infinite;*/
+  animation: flicker 2s infinite;
 }
 h3 {
   color: #ff3333;
@@ -63,7 +64,7 @@ h3 {
   margin: 0;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   letter-spacing: 2px;
-  /*animation: flicker 2s infinite;*/
+  animation: flicker 2s infinite;
 }
 
 .account-button, .login-button {
@@ -135,6 +136,26 @@ h3 {
   transform: translate(-50%, -50%);
 }
 
+.button-container {
+  display: flex;
+  width: 40%;
+  gap: 10px;
+}
+
+.finished-button {
+  padding: 8px 15px;
+  background-color: #ff3333;
+  border: 2px solid #ddd;
+  color: #1a1a1a;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+.finished-button:hover {
+  background-color: #ff6666;
+}
+
 .sort-button {
   padding: 8px 15px;
   background-color: #ff3333;
@@ -147,7 +168,6 @@ h3 {
   transition: all 0.3s ease;
   box-shadow: 3px 3px 0px #ddd;
   height: 45px;
-  width: 20%;
   align-items: center;
 }
 
@@ -214,6 +234,7 @@ h3 {
     transform: scale(1.05);
     box-shadow: 0 0 10px rgba(255, 51, 51, 0.5);
 }
+
 
 .predictions-table .pending-prediction {
   color: #ffff33;
@@ -283,6 +304,54 @@ h3 {
   margin: 0 5px;  /* Добавляем небольшой отступ слева и справа */
 }
 
+.predict-win-text {
+    font-family: 'Special Elite', cursive;
+    font-size: 48px;
+    fill: #ff3333;
+    text-anchor: middle;
+    dominant-baseline: middle;
+    text-shadow: 0 0 5px rgba(255, 51, 51, 0.5);
+}
+
+
+
+
+.predictions-table th.game-info,
+.predictions-table td.game-info {
+  background-color: rgba(255, 255, 255, 0.05); /* Слегка светлее фон */
+  border-right: 2px solid #444; /* Тонкая линия-разделитель */
+}
+
+/* Стиль для заголовков столбцов с информацией об игре */
+.predictions-table th.game-info {
+  font-weight: bold;
+  font-size: 1.05rem;
+  color: #ff3333; /* Красный цвет для выделения */
+}
+
+/* Стиль для ячейки со счетом */
+.predictions-table td.game-info.score {
+  font-weight: bold;
+  font-size: 1.05rem;
+  color: #ff3333; /* Красный цвет для выделения счета */
+  border-right: 2px solid #444;
+}
+
+/* Дополнительные стили для улучшения читаемости */
+.predictions-table td.game-info {
+  padding: 10px;
+}
+
+/* Стиль для "vs" в названии игры */
+.predictions-table td.game-info .vs {
+  color: #ff3333;
+  font-weight: bold;
+  margin: 0 5px;
+}
+
+
+
+
 /*.tournament-select-container {*/
 /*    display: flex;*/
 /*    align-items: center;*/
@@ -300,23 +369,10 @@ h3 {
     background-color: #444 !important;
 }
 
-
-.predictions-table th:nth-child(1)::before {
-    content: "🕒  ";
-}
-
-.predictions-table th:nth-child(2)::before {
-    content: "⚽  ";
-}
-
-.predictions-table th:nth-child(3)::before {
-    content: "🏆  ";
-}
-
 @keyframes flicker {
-  0% { opacity: 0.8; }
-  50% { opacity: 1; }
-  100% { opacity: 0.8; }
+  0% { opacity: 0.4; }
+  50% { opacity: 1.4; }
+  100% { opacity: 0.4; }
 }
 
 @keyframes flashing {
@@ -326,6 +382,35 @@ h3 {
 
 .flashing-light {
   animation: flashing 2s ease-in-out infinite;
+}
+
+.rules-container {
+  margin-top: 2rem;
+  padding: 1rem;
+  background-color: #1a1a1a;
+  border: 2px solid #ff3333;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(255, 51, 51, 0.3);
+}
+
+.rules-container h2 {
+  color: #ff3333;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.rules-container ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.rules-container li {
+  color: #ddd;
+  font-size: 1rem;
+}
+
+.rules-container strong {
+  color: #ff3333;
 }
 
 @media (max-width: 768px) {
