--- a/react_frontend/src/components/Home.css
+++ b/react_frontend/src/components/Home.css
@@ -131,6 +131,11 @@ h3 {
   flex-shrink: 0;
 }
 
+.current-user-column {
+  background-color: rgba(255, 51, 51, 0.02); /* Легкий желтый фон */
+  font-weight: bold;
+}
+
 .tournament-logo {
   width: 100%; /* Adjust to fit inside the square */
   height: 100%; /* Adjust to fit inside the square */
