--- a/react_frontend/src/components/Home.css
+++ b/react_frontend/src/components/Home.css
@@ -21,18 +21,6 @@ body {
   overflow: hidden;
 }
 
-/*.container::before {*/
-/*  content: "";*/
-/*  position: absolute;*/
-/*  top: 0;*/
-/*  left: 0;*/
-/*  right: 0;*/
-/*  bottom: 0;*/
-/*  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100"><rect width="100" height="100" fill="%23222"/><path d="M0 0 L100 100 M100 0 L0 100" stroke="%23333" stroke-width="0.5"/></svg>');*/
-/*  opacity: 0.1;*/
-/*  pointer-events: none;*/
-/*}*/
-
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -559,3 +547,8 @@ h3 {
     color: #ff3333;
   }
 }
+
+.participant-name {
+    display: none;
+}
+
