--- a/react_frontend/src/components/Dashboard.css
+++ b/react_frontend/src/components/Dashboard.css
@@ -726,6 +726,100 @@ button:hover {
 }
 
 
+.teams-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1rem;
+  /*padding: 1rem;*/
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
+.team-card {
+  background-color: var(--input-bg-color);
+  border: 1px solid var(--border-color);
+  border-radius: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-start;
+  transition: transform 0.3s ease;
+}
+
+.team-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 5px 5px 0px #ff3333;
+}
+
+.team-emblem {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+  margin-bottom: 0.5rem;
+}
+
+.team-card h3 {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+
+.team-card p {
+  font-size: 0.8rem;
+  margin: 0.2rem 0;
+}
+
+.team-tournaments {
+  font-size: 0.7rem;
+  margin-top: 0.3rem;
+  max-height: 2.1rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.team-card h3 {
+  font-size: 0.9rem;
+  margin: 0.3rem 0;
+  text-align: center;
+  min-height: 2.7em; /* Примерно 3 строки текста */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
+
+@media (max-width: 1200px) {
+  .teams-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 992px) {
+  .teams-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .teams-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 480px) {
+  .teams-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+
 
 
 @media (max-width: 48rem) {
