--- a/react_frontend/src/components/Dashboard.css
+++ b/react_frontend/src/components/Dashboard.css
@@ -82,28 +82,28 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.25rem 0;
+  padding: 1.25rem 0.1rem;
   border-bottom: 0.125rem solid var(--border-color);
 }
 
-.back-button, button {
-  padding: 0.625rem 1.25rem;
-  background-color: var(--highlight-color);
-  color: var(--main-bg-color);
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  border: 0.125rem solid var(--text-color);
-  transition: all 0.3s ease;
-  box-shadow: 0.1875rem 0.1875rem 0 var(--text-color);
-  cursor: pointer;
-  font-family: 'Special Elite', cursive;
+.back-button{
+    padding: 8px 15px;
+    background-color: #ff3333;
+    color: #1a1a1a;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 2px solid #ddd;
+    transition: all 0.3s ease;
+    margin-top: 10px;
+    align-self: flex-end;
+    box-shadow: 3px 3px 0px #ddd;
 }
 
-.back-button:hover, button:hover {
-  background-color: var(--text-color);
-  color: var(--highlight-color);
-  box-shadow: 0.3125rem 0.3125rem 0 var(--highlight-color);
+.back-button:hover{
+    background-color: #ddd;
+    color: #ff3333;
+    box-shadow: 5px 5px 0px #ff3333;
 }
 
 .admin-section {
@@ -846,10 +846,17 @@ button:hover {
     align-items: flex-start;
   }
 
-  .back-button, button {
+  .button {
     width: 100%;
     margin-top: 0.625rem;
     text-align: center;
+  }
+
+  .back-button {
+      font-size: 14px;
+      padding: 6px 12px;
+      margin-top: 1rem;
+      margin-left: 0;
   }
 
   .admin-section {
