--- a/react_frontend/src/components/Dashboard.css
+++ b/react_frontend/src/components/Dashboard.css
@@ -1032,3 +1032,99 @@ button:hover {
 .matches-table button:hover {
   background-color: #ff6666;
 }
+
+
+/* Стили для контейнера вкладок */
+.tab-container {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 1.25rem;
+}
+
+/* Стили для кнопок вкладок */
+.tab-button {
+    padding: 0.625rem 1.25rem;
+    border: 2px solid #ddd;
+    background-color: var(--input-bg-color);
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.tab-button.active {
+    background-color: var(--highlight-color);
+}
+
+/* Медиа-запрос для мобильных устройств */
+@media (max-width: 768px) {
+    .tab-container {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    .tab-button {
+        flex: 1 1 calc(33.333% - 10px); /* Три кнопки в ряд на маленьких экранах */
+        margin: 2px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+/* Дополнительный медиа-запрос для очень маленьких экранов */
+@media (max-width: 480px) {
+    .tab-button {
+        flex: 1 1 calc(50% - 10px); /* Две кнопки в ряд на очень маленьких экранах */
+    }
+}
+
+.back-button {
+    display: inline-block;
+    padding: 8px 15px;
+    background-color: #ff3333;
+    color: #1a1a1a;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 2px solid #ddd;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 0px #ddd;
+}
+
+.back-button:hover {
+    background-color: #ddd;
+    color: #ff3333;
+    box-shadow: 5px 5px 0px #ff3333;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    border-bottom: 2px solid #444;
+}
+
+/* Стили для карточки игры */
+.game-teams {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.team {
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* Медиа-запрос для мобильных устройств */
+@media (max-width: 768px) {
+    .game-teams {
+        flex-direction: row;
+    }
+
+    .team {
+        font-size: 14px;
+    }
+}
