--- a/react_frontend/src/services/MatchPopup.css
+++ b/react_frontend/src/services/MatchPopup.css
@@ -24,7 +24,7 @@
   color: #ddd;
 }
 
-.close-button {
+.close-button-popup {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -68,6 +68,10 @@
 .team-popup h2 {
   font-size: 1rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   color: #ff3333;
 }
